# podman_pytest

./: Dockerfile  annat.py  banken.py  carport_agent.py  check_strings.py  conftest.py  dca_350tkr.py  doc_add_piechart.py  doc_create_again.py  gear_system.py  generate_img_and_doc.py  give_me_a_doc_w_img.py  grafen.py  kanske_en_ai_agent.py  kolumner.py  kolumns.docx  machine_ollama.py  meramer.sh  ml_stuff.py  montecarlo.py  more_streamlit.py  more_threads.py  office_time.py  ping_all_in_subnet.py  pyproject.toml  requirements.txt  result_printing.py  rsi_kop_slaj.py  run_pytest.sh  sort_pdf_files.py  swatch_time.py  test_gear_system.py  test_main.py  test_pytest_stuff.py  test_swatch_time.py  testaa_umap.py  trav_svs.py  unsupervised.py  work_at_home.py
python/: kalas.py
